# InsightAgent

./: .env.example  .gitignore  CLAUDE.md  README.md  analytics_agent_ui_wireframe.html  app.py  build_schema_index.py  catalog.py  clarify.py  cost.py  db.py  embedding.py  eval_suite.py  execution.py  generation.py  insightagent_v2_evaluation.md  insightagent_v2_lifecycle_mermaid.md  llm.py  pii.py  pipeline.py  pyproject.toml  requirements.txt  resolver.py  retrieve.py  selfcheck.py  summary.py  validation.py
docs/: Schema.txt  insightagent_v2_prd.md
eval/: eval_suite.py
insightagent/: __init__.py  catalog.py  clarify.py  cost.py  db.py  embedding.py  execution.py  generation.py  llm.py  pipeline.py  resolver.py  retrieve.py  selfcheck.py  summary.py  table_descriptions.py  validation.py
scripts/: build_schema_index.py
sql/: reference_queries.sql
ui/: app.py
